--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <h2>News</h2><br>
     <font size="3px">
 	    
+    <b>26 June 2023</b><br>
+    <span class="easylink">
+    We release a new paper about generative retrieval, "Learning to Rank in Generative Retrieval".
+    </span><br><br>	
+	    
     <b>2 May 2023</b><br>
     <span class="easylink">
     Our full paper about Generative Retrieval is accepted by ACL 2023 Main Conference.
@@ -149,7 +154,21 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="papers/xxx" 
+    <td class="left"><a href="https://arxiv.org/abs/2306.15222" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Learning to Rank in Generative Retrieval</span> 
+      <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
+    <br>Arxiv 2023
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+	
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2305.16675" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Multiview Identifiers Enhanced Generative Retrieval</span> 
       <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
