--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> <span class="title">Research Intern</span>, Microsoft Research Asia, Apr 2022 - Now <br>
+    <td> <span class="title">Research Intern</span>, Microsoft Research Asia, Apr 2022 - Jun 2023 <br>
 			Working with <a href="https://scholar.google.com.hk/citations?user=InAQ3o0AAAAJ&hl=zh-CN&oi=ao" target="_blank">Nan Yang</a>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=NfJbKJ4AAAAJ" target="_blank">Liang Wang</a>, <a href="http://gitnlp.org/" target="_blank">Furu Wei</a>
 		</td></tr></tbody>
 </table>
