--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ liyongqi0@gmail.com</a><br>
 <div style="margin-top:20px;">
 Yongqi Li is a PHD student in the Department of Computing at The Hong Kong Polytechnic University. 
 He received the B.E. degree in School of Computer Science and Technology from Shandong University, in 2019. 
-His research interests include information retrieval and multimedia computing. Now he mainly focuses on conversational 
-information seeking, such as conversational QA, multimodal conversational QA, and conversational search.
+His research interests include information retrieval and multimedia computing. Now he mainly focuses on text retrieval and conversational 
+information seeking, such as generative retrieval, conversational QA, and multimodal conversational QA.
 </div>
 <!-- ============================Profiles===========================================!-->
 
