--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="papers/" 
+    <td class="left"><a href="papers/Incremental Knowledge Based Question Answering.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Incremental Knowledge Based Question Answering</span> 
       <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
