--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="papers/xxx" 
+    <td class="left"><a href="papers/MMCoQA Conversational Question Answering over Text Tables and Images.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">MMCoQA: Conversational Question Answering over Text, Tables, and Images</span> 
       <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
@@ -197,7 +197,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="papers/xxx" 
+    <td class="left"><a href="papers/Dynamic Graph Reasoning for Conversational Open-Domain Question Answering.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Dynamic Graph Reasoning for Conversational Open-Domain Question Answering</span> 
       <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
@@ -213,7 +213,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="papers/" 
+    <td class="left"><a href="papers/>Data Distillation for Text Classification.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Data Distillation for Text Classification</span> 
       <br><b>Yongqi Li</b> & Wenjie Li
