--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Learning to Rank in Generative Retrieval</span> 
       <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
-    <br>Arxiv 2023 （Full)
+    <br>Arxiv 2023 (Full)
   </td>
   </tr>
  </tbody>
