--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <h2>News</h2><br>
     <font size="3px">
 	    
+    <b>1 Aug 2023</b><br>
+    <span class="easylink">
+    Our paper "Generative Retrieval for Conversational Question Answering" is accepted by Information Processing & Management (IP&M). The paper and code are coming soon.
+    </span><br><br>	
+	    	    
     <b>26 June 2023</b><br>
     <span class="easylink">
     We release a new paper about generative retrieval, "Learning to Rank in Generative Retrieval".
