--- a/index.html
+++ b/index.html
@@ -169,6 +169,19 @@ information seeking, such as generative retrieval, conversational QA, and multim
  </tbody>
 </table>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Generative Retrieval for Conversational Question Answering </span> 
+      <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
+    <br>IP&M 2023 (Full)
+   <br>&nbsp;&nbsp;&bull; <a href="" target="_blank">Codes&Data coming soon</a> &nbsp;&nbsp;
+  </td>
+  </tr>
+ </tbody>
+</table>
 	
 <table>
   <tbody>
