--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
     <td><span class="title">Generative Retrieval for Conversational Question Answering </span> 
       <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
     <br>IP&M 2023 (Full)
-   <br>&nbsp;&nbsp;&bull; <a href="" target="_blank">Codes&Data coming soon</a> &nbsp;&nbsp;
+   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/GCoQA" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
   </tr>
  </tbody>
