--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="" 
+    <td class="left"><a href="papers/Generative Retrieval for Conversational Question Answering.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Generative Retrieval for Conversational Question Answering </span> 
       <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
