--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
 <table>
   <tbody><tr>
     <td> <span class="title">Research Intern</span>, Microsoft Research Asia, Apr 2022 - Jun 2023 <br>
-			Working with <a href="https://scholar.google.com.hk/citations?user=InAQ3o0AAAAJ&hl=zh-CN&oi=ao" target="_blank">Nan Yang</a>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=NfJbKJ4AAAAJ" target="_blank">Liang Wang</a>, <a href="http://gitnlp.org/" target="_blank">Furu Wei</a>
+			Working with <a href="https://scholar.google.com.hk/citations?user=InAQ3o0AAAAJ&hl=zh-CN&oi=ao" target="_blank">Nan Yang</a>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=NfJbKJ4AAAAJ" target="_blank">Liang Wang</a>, <a href="https://scholar.google.com.hk/citations?user=G-V1VpwAAAAJ&hl=en&oi=ao" target="_blank">Furu Wei</a>
 		</td></tr></tbody>
 </table>
 <!-- ============================Experiences===========================================!-->
