--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
 <!-- ============================Professional Services===========================================!-->
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
+  Program Committee Member and Reviewer for <span class="title">CIKM 2023</span><br><br>
   Program Committee Member and Reviewer for <span class="title">ACM WSDM 2023</span><br><br>
   Invited Reviewer for <span class="title">ACM Transactions on Information Systems (TOIS)</span><br><br>
   Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span><br><br>
