--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <h2>News</h2><br>
     <font size="3px">
 	    
+    <b>10 Dec 2023</b><br>
+    <span class="easylink">
+    Two papers about generative retrieval and cold-start recommendation are accepted by AAAI 2024. 
+    </span><br><br>	
+	    	    	    
     <b>1 Aug 2023</b><br>
     <span class="easylink">
     Our paper "Generative Retrieval for Conversational Question Answering" is accepted by Information Processing & Management (IP&M). The paper and code are coming soon.
@@ -163,12 +168,25 @@ information seeking, such as generative retrieval, conversational QA, and multim
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Learning to Rank in Generative Retrieval</span> 
       <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
-    <br>Arxiv 2023 (Full)
+    <br>AAAI 2024 (Full)
   </td>
   </tr>
  </tbody>
 </table>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2306.15222" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Temporally and Distributionally Robust Optimization for Cold-start Recommendation</span> 
+      <br>Xinyu Lin, Wenjie Wang, Jujia Zhao, Yongqi Li, Fuli Feng & Tat-Seng Chua
+    <br>AAAI 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
 <table>
   <tbody>
   <tr>
