--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
     <td class="left"><a href="https://arxiv.org/abs/2306.15222" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Temporally and Distributionally Robust Optimization for Cold-start Recommendation</span> 
-      <br>Xinyu Lin, Wenjie Wang, Jujia Zhao, Yongqi Li, Fuli Feng & Tat-Seng Chua
+      <br>Xinyu Lin, Wenjie Wang, Jujia Zhao, <b>Yongqi Li</b>, Fuli Feng & Tat-Seng Chua
     <br>AAAI 2024 (Full)
   </td>
   </tr>
