--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@ information seeking, such as generative retrieval, conversational QA, and multim
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> <span class="title">Visiting Student</span>, National University of Singapore, Next++ Lab, Jul 2023 - now <br>
+    <td> Visiting Student, <span class="title">National University of Singapore</span>, Next++ Lab, Jul 2023 - now <br>
 			Working with Prof. <a href="https://scholar.google.com.hk/citations?user=Z9DWCBEAAAAJ&hl=zh-CN" target="_blank">Tat-Seng Chua</a>
 		</td></tr></tbody>
 </table>
 <table>
   <tbody><tr>
-    <td> <span class="title">Research Intern</span>, Microsoft Research Asia, Apr 2022 - Jun 2023 <br>
+    <td> Research Intern <span class="title">Microsoft Research Asia</span>, Apr 2022 - Jun 2023 <br>
 			Working with <a href="https://scholar.google.com.hk/citations?user=InAQ3o0AAAAJ&hl=zh-CN&oi=ao" target="_blank">Nan Yang</a>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=NfJbKJ4AAAAJ" target="_blank">Liang Wang</a>, <a href="https://scholar.google.com.hk/citations?user=G-V1VpwAAAAJ&hl=en&oi=ao" target="_blank">Furu Wei</a>
 		</td></tr></tbody>
 </table>
