--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
     <td><span class="title">Learning to Rank in Generative Retrieval</span> 
       <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
     <br>AAAI 2024 (Full)
+    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/LTRGR" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
   </tr>
  </tbody>
