--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
+
 	    
     <b>10 Dec 2023</b><br>
     <span class="easylink">
@@ -427,7 +428,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
 <!-- ============================Professional Services===========================================!-->
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
-  Program Committee Member and Reviewer for <span class="title">CIKM 2023</span><br><br>
+  Program Committee Member and Reviewer for <span class="title">ACM CIKM 2023</span><br><br>
   Program Committee Member and Reviewer for <span class="title">ACM WSDM 2023</span><br><br>
   Invited Reviewer for <span class="title">ACM Transactions on Information Systems (TOIS)</span><br><br>
   Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span><br><br>
