--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
-
-	    
     <b>10 Dec 2023</b><br>
     <span class="easylink">
     Two papers about generative retrieval and cold-start recommendation are accepted by AAAI 2024. 
@@ -114,11 +112,9 @@ liyongqi0@gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-Yongqi Li is a PHD student in the Department of Computing at The Hong Kong Polytechnic University. 
-He received the B.E. degree in School of Computer Science and Technology from Shandong University, in 2019. 
-His research interests include information retrieval and multimedia computing. Now he mainly focuses on text retrieval and conversational 
-information seeking, such as generative retrieval, conversational QA, and multimodal conversational QA.
-</div>
+Yongqi Li is a a Postdoctoral Fellow in the Department of Computing at The Hong Kong Polytechnic University. 
+He received the PhD degree in  the Department of Computing from The Hong Kong Polytechnic University and the B.E. degree in School of Computer Science and Technology from Shandong University. 
+His research interests include natural language processing, information retrieval, and multimedia computing. Now he mainly focuses on generative retrieval, conversational QA, and tool learning in LLMs.</div>
 <!-- ============================Profiles===========================================!-->
 
 
@@ -130,7 +126,7 @@ information seeking, such as generative retrieval, conversational QA, and multim
   <tbody>
   <tr>
     <td><span class="title">The Hong Kong Polytechnic University </span> <br>
-	PHD in Computer Science, Jan 2020 - now <br>
+	PHD in Computer Science, Jan 2020 - Jan 2024 <br>
 	Advisor: <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a> <br>
 	Mentor:  <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
 	    
