--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ liyongqi0@gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-Yongqi Li is a a Postdoctoral Fellow in the Department of Computing at The Hong Kong Polytechnic University. 
+Yongqi Li is a Postdoctoral Fellow in the Department of Computing at The Hong Kong Polytechnic University. 
 He received the PhD degree in  the Department of Computing from The Hong Kong Polytechnic University and the B.E. degree in School of Computer Science and Technology from Shandong University. 
 His research interests include natural language processing, information retrieval, and multimedia computing. Now he mainly focuses on generative retrieval, conversational QA, and tool learning in LLMs.</div>
 <!-- ============================Profiles===========================================!-->
