--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <b><font size="+2">Yongqi Li&nbsp;</font></b>
 <p style="margin-left:0px;">
 </p><p style="margin-left:0px;">
-<b>PHD Student</b>
+<b>Postdoctoral Fellow</b>
 </p><p style="margin-left:0px;">
 <a href="https://www.comp.polyu.edu.hk/en-us/", target="_blank">Computing Department</a><br/>
 <a href="https://www.polyu.edu.hk/web/en/home/index.html", target="_blank">The Hong Kong Polytechnic University</a><br/>
