--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ His research interests include natural language processing, information retrieva
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> Visiting Student, <span class="title">National University of Singapore</span>, Next++ Lab, Jul 2023 - now <br>
+    <td> Visiting Student, <span class="title">National University of Singapore</span>, Next++ Lab, Jul 2023 - Jan 2024 <br>
 			Working with Prof. <a href="https://scholar.google.com.hk/citations?user=Z9DWCBEAAAAJ&hl=zh-CN" target="_blank">Tat-Seng Chua</a>
 		</td></tr></tbody>
 </table>
