--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
+
+    <b>27 Feb 2024</b><br>
+    <span class="easylink">
+    One paper is accepted by CVPR 2024. 
+    </span><br><br>	
+	    	    	  
+	    
     <b>10 Dec 2023</b><br>
     <span class="easylink">
     Two papers about generative retrieval and cold-start recommendation are accepted by AAAI 2024. 
