--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="https://arxiv.org/abs/2306.15222" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Discriminative Probing and Tuning for Text-to-Image Generation</span> 
-      <be> Leigang Qu, Wenjie Wang, <b>Yongqi Li</b>, Hanwang Zhang, Liqiang Nie, Tat-Seng Chua
+      <br><be> Leigang Qu, Wenjie Wang, <b>Yongqi Li</b>, Hanwang Zhang, Liqiang Nie, Tat-Seng Chua
     <br>CVPR 2024 (Full)
     <br>&nbsp;&nbsp;&bull; <a href="https://dpt-t2i.github.io/" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
