--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <h2>News</h2><br>
     <font size="3px">
 
+    <b>26 Mar 2024</b><br>
+    <span class="easylink">
+    Our paper "Data-efficient Fine-tuning for LLM-based Recommendation" is accepted by SIGIR 2024.   Congratulations to <a href="https://scholar.google.com.hk/citations?user=0O_bs3UAAAAJ&hl=zh-CN" target="_blank">Xinyu</a>!.
+    </span><br><br>	
+	    
     <b>27 Feb 2024</b><br>
     <span class="easylink">
     One paper is accepted by CVPR 2024. 
@@ -171,6 +176,19 @@ His research interests include natural language processing, information retrieva
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2401.17197" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Data-efficient Fine-tuning for LLM-based Recommendation</span> 
+      <br>Xinyu Lin, Wenjie Wang, <b>Yongqi Li</b>, Shuo Yang, Fuli Feng, Yinwei Wei, Tat-Seng Chua
+    <br>SIGIR 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
 <table>
   <tbody>
   <tr>
