--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <b>26 Mar 2024</b><br>
     <span class="easylink">
-    Our paper "Data-efficient Fine-tuning for LLM-based Recommendation" is accepted by SIGIR 2024.   Congratulations to <a href="https://scholar.google.com.hk/citations?user=0O_bs3UAAAAJ&hl=zh-CN" target="_blank">Xinyu</a>!.
+    Our paper "Data-efficient Fine-tuning for LLM-based Recommendation" is accepted by SIGIR 2024. Congratulations to <a href="https://scholar.google.com.hk/citations?user=0O_bs3UAAAAJ&hl=zh-CN" target="_blank">Xinyu</a>!
     </span><br><br>	
 	    
     <b>27 Feb 2024</b><br>
