--- a/index.html
+++ b/index.html
@@ -176,6 +176,60 @@ His research interests include natural language processing, information retrieva
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
+	
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2402.10805" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Generative Cross-Modal Retrieval: Memorizing Images in Multimodal Language Models for Retrieval and Beyond</span> 
+      <br><b>Yongqi Li</b>, Wenjie Wang, Leigang Qu, Liqiang Nie, Wenjie Li, Tat-Seng Chua
+    <br>Arxiv 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>	
+	
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2402.10769" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Distillation Enhanced Generative Retrieval</span> 
+      <br><b>Yongqi Li</b>, Zhen Zhang, Wenjie Wang, Liqiang Nie, Wenjie Li, Tat-Seng Chua
+    <br>Arxiv 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
+	
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2402.02082" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">GliDe with a CaPE: A Low-Hassle Method to Accelerate Speculative Decoding</span> 
+      <br>Cunxiao Du, Jing Jiang, Xu Yuanchen, Jiawei Wu, Sicheng Yu, <b>Yongqi Li</b>, Shenggui Li, Kai Xu, Liqiang Nie, Zhaopeng Tu, Yang You
+    <br>Arxiv 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2401.07851" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Unlocking efficiency in large language model inference: A comprehensive survey of speculative decoding</span> 
+      <br>Heming Xia, Zhe Yang, Qingxiu Dong, Peiyi Wang, <b>Yongqi Li</b>, Tao Ge, Tianyu Liu, Wenjie Li, Zhifang Sui
+    <br>Arxiv 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
 <table>
   <tbody>
   <tr>
@@ -209,7 +263,7 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="https://arxiv.org/abs/2306.15222" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Learning to Rank in Generative Retrieval</span> 
-      <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
+      <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei, Wenjie Li
     <br>AAAI 2024 (Full)
     <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/LTRGR" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
@@ -223,8 +277,21 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="https://arxiv.org/abs/2306.15222" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Temporally and Distributionally Robust Optimization for Cold-start Recommendation</span> 
-      <br>Xinyu Lin, Wenjie Wang, Jujia Zhao, <b>Yongqi Li</b>, Fuli Feng & Tat-Seng Chua
+      <br>Xinyu Lin, Wenjie Wang, Jujia Zhao, <b>Yongqi Li</b>, Fuli Feng, Tat-Seng Chua
     <br>AAAI 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2310.06491" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">A Multi-facet Paradigm to Bridge Large Language Model and Recommendation </span> 
+      <br>Xinyu Lin, Wenjie Wang, <b>Yongqi Li</b>, Fuli Feng, See-Kiong Ng, Tat-Seng Chua
+    <br>Arxiv 2023 (Full)
   </td>
   </tr>
  </tbody>
@@ -236,7 +303,7 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="papers/Generative Retrieval for Conversational Question Answering.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Generative Retrieval for Conversational Question Answering </span> 
-      <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
+      <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei, Wenjie Li
     <br>IP&M 2023 (Full)
    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/GCoQA" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
@@ -250,7 +317,7 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="https://arxiv.org/abs/2305.16675" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Multiview Identifiers Enhanced Generative Retrieval</span> 
-      <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
+      <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei, Wenjie Li
     <br>ACL 2023 (Full)
    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/MINDER" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
@@ -265,7 +332,7 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="papers/MMCoQA Conversational Question Answering over Text Tables and Images.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">MMCoQA: Conversational Question Answering over Text, Tables, and Images</span> 
-      <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
+      <br><b>Yongqi Li</b>, Wenjie Li, Liqiang Nie
     <br>ACL 2022 (Full)
    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/MMCoQA" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
@@ -279,7 +346,7 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="papers/Dynamic Graph Reasoning for Conversational Open-Domain Question Answering.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Dynamic Graph Reasoning for Conversational Open-Domain Question Answering</span> 
-      <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
+      <br><b>Yongqi Li</b>, Wenjie Li, Liqiang Nie
     <br>ACM TOIS 2022 (Full)
    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/DGRCoQA" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
@@ -295,7 +362,7 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="papers/>Data Distillation for Text Classification.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Data Distillation for Text Classification</span> 
-      <br><b>Yongqi Li</b> & Wenjie Li
+      <br><b>Yongqi Li</b>, Wenjie Li
 	<br>Arxiv 2021 (Short paper)
    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/Data-Distillation-for-Text-Classification" target="_blank">Codes&Data</a> &nbsp;&nbsp;
 
@@ -311,7 +378,7 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="papers/Incremental Knowledge Based Question Answering.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Incremental Knowledge Based Question Answering</span> 
-      <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
+      <br><b>Yongqi Li</b>, Wenjie Li, Liqiang Nie
    <br>Arxiv 2021 (Full)
   </td>
   </tr>
@@ -324,7 +391,7 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="papers/Large-Scale_Question_Tagging_via_Joint_Question-Topic_Embedding_Learning.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Large-Scale Question Tagging via Joint Question-Topic Embedding Learning</span> 
-      <br>Liqiang Nie, <b>Yongqi Li</b>, Fuli Feng, Xuemeng Song, Meng Wang & Yinglong Wang
+      <br>Liqiang Nie, <b>Yongqi Li</b>, Fuli Feng, Xuemeng Song, Meng Wang, Yinglong Wang
     <br>ACM TOIS 2020 (Full)
    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/PROFIT" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
@@ -338,7 +405,7 @@ His research interests include natural language processing, information retrieva
     <td class="left"><a href="papers/MM2019_Routing_Micro_videos_via_A_Temporal_Graph_guided_Recommendation_System.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> 
-      <br><b>Yongqi Li</b>, Meng Liu, Jianhua Yin, Chaoran Cui, Xinshun-Xu & Liqiang Nie
+      <br><b>Yongqi Li</b>, Meng Liu, Jianhua Yin, Chaoran Cui, Xinshun-Xu, Liqiang Nie
     <br>ACM MM 2019 (Full)
    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/ALPINE" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
@@ -479,17 +546,17 @@ His research interests include natural language processing, information retrieva
 <h2 style="CLEAR: both;">Patent</h2>
 <table><tbody><tr><td>
   <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> (ZL 2019 1 0599470.7) &nbsp;&nbsp;
-  <br> - Meng Liu, Liqiang Nie, Yongqi Li, Jianhua Yin, Tian Gan and Xuemeng Song
+  <br> - Meng Liu, Liqiang Nie, Yongqi Li, Jianhua Yin, Tian Gan, Xuemeng Song
 </td></tr></tbody></table>
 
 <table><tbody><tr><td>
   <span class="title">Explicit Interaction Model towards Text Classification </span> (ZL 2018 1 1296063.0) &nbsp;&nbsp;
-  <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen, Yongqi Li, Xuemeng Song and Liqiang Nie
+  <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen, Yongqi Li, Xuemeng Song, Liqiang Nie
 </td></tr></tbody></table>
 
 <table><tbody><tr><td>
   <span class="title">Learning to Score Diving Sports</span> (ZL 2018 1 1030493.8) &nbsp;&nbsp; 
-  <br> - Yongqi Li, Cunxiao Du, Junyu Lin, Tian Gan, Xuemeng Song and Liqiang Nie
+  <br> - Yongqi Li, Cunxiao Du, Junyu Lin, Tian Gan, Xuemeng Song, Liqiang Nie
 </td></tr></tbody></table>
 
 <!-- ============================Projects===========================================!-->
