--- a/index.html
+++ b/index.html
@@ -126,10 +126,9 @@ liyongqi0@gmail.com</a><br>
 <div style="margin-top:20px;">
 Yongqi Li is a Postdoctoral Fellow in the Department of Computing at The Hong Kong Polytechnic University. 
 He received the PhD degree in  the Department of Computing from The Hong Kong Polytechnic University and the B.E. degree in School of Computer Science and Technology from Shandong University. 
-His research interests include natural language processing, information retrieval, and multimedia computing. Now he mainly focuses on the following research topics:
-
--NLP (LLM: tool learning, acceleration, alignment)
--IR (Generative retrieval and recommendation)
+His research interests include natural language processing, information retrieval, and multimedia computing. Now he mainly focuses on the following research topics:<br>
+-NLP (LLM: tool learning, acceleration, alignment)<br>
+-IR (Generative retrieval and recommendation)<br>
 -Multimedia (MLLM and multimodal information retrieval)
 	
 </div>
@@ -144,7 +143,7 @@ His research interests include natural language processing, information retrieva
   <tbody>
   <tr>
     <td><span class="title">The Hong Kong Polytechnic University </span> <br>
-	PHD in Computer Science, Jan 2020 - Jan 2024 <br>
+	PhD in Computer Science, Jan 2020 - Jan 2024 <br>
 	Advisor: <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a> <br>
 	Mentor:  <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
 	    
@@ -176,14 +175,14 @@ His research interests include natural language processing, information retrieva
 </table>
 <table>
   <tbody><tr>
-    <td> Research Intern <span class="title">Microsoft Research Asia</span>, Apr 2022 - Jun 2023 <br>
-			Working with <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
+    <td> Research Intern <span class="title">Microsoft Research Asia</span>, July 2027 - Dec 2019 <br>
+			Working with <a href="https://scholar.google.com.hk/citations?user=InAQ3o0AAAAJ&hl=zh-CN&oi=ao" target="_blank">Nan Yang</a>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=NfJbKJ4AAAAJ" target="_blank">Liang Wang</a>, <a href="https://scholar.google.com.hk/citations?user=G-V1VpwAAAAJ&hl=en&oi=ao" target="_blank">Furu Wei</a>
 		</td></tr></tbody>
 </table>
 <table>
   <tbody><tr>
-    <td> Research Intern <span class="title">Shandong University</span>, July 2027 - Dec 2019 <br>
-			Working with <a href="https://scholar.google.com.hk/citations?user=InAQ3o0AAAAJ&hl=zh-CN&oi=ao" target="_blank">Nan Yang</a>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=NfJbKJ4AAAAJ" target="_blank">Liang Wang</a>, <a href="https://scholar.google.com.hk/citations?user=G-V1VpwAAAAJ&hl=en&oi=ao" target="_blank">Furu Wei</a>
+    <td> Research Intern <span class="title">Shandong University</span>, Apr 2022 - Jun 2023 <br>
+			Working with <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
 		</td></tr></tbody>
 </table>
 <!-- ============================Experiences===========================================!-->
