--- a/index.html
+++ b/index.html
@@ -126,11 +126,12 @@ liyongqi0@gmail.com</a><br>
 <div style="margin-top:20px;">
 Yongqi Li is a Postdoctoral Fellow in the Department of Computing at The Hong Kong Polytechnic University. 
 He received the PhD degree in  the Department of Computing from The Hong Kong Polytechnic University and the Bachelor degree in School of Computer Science and Technology from Shandong University. 
-His research interests include natural language processing, information retrieval, and multimedia computing. <br>
+His research interests include natural language processing, information retrieval, and multimedia computing. <be>
+<br>
 Now he mainly focuses on the following research topics:<br>
 -NLP (LLM: tool learning, acceleration, alignment)<br>
 -IR (Generative retrieval and recommendation)<br>
--Multimedia (MLLM and multimodal information retrieval)
+-Multimedia (MLLM and multimodal information retrieval)<br>
 We are looking for highly motivated PhD/master/undergraduate students to collaborate on various interesting research topics, including the above ones. 	If you are interested, please feel free to send your CV.
 </div>
 <!-- ============================Profiles===========================================!-->
