--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Now he mainly focuses on the following research topics:<br>
 -NLP (LLM: tool learning, acceleration, alignment)<br>
 -IR (Generative retrieval and recommendation)<br>
 -Multimedia (MLLM and multimodal information retrieval)<br>
-We are looking for highly motivated PhD/master/undergraduate students to collaborate on various interesting research topics, including the above ones. 	If you are interested, please feel free to send your CV.
+Our team looking for highly motivated PhD/master/undergraduate students to collaborate on various interesting research topics, including the above ones. 	If you are interested, please feel free to send your CV to my email.
 </div>
 <!-- ============================Profiles===========================================!-->
 
