--- a/index.html
+++ b/index.html
@@ -127,12 +127,13 @@ liyongqi0@gmail.com</a><br>
 Yongqi Li is a Postdoctoral Fellow in the Department of Computing at The Hong Kong Polytechnic University. 
 He received the PhD degree in  the Department of Computing from The Hong Kong Polytechnic University and the Bachelor degree in School of Computer Science and Technology from Shandong University. 
 His research interests include natural language processing, information retrieval, and multimedia computing. <be>
-<br>
+</div>
+<div style="margin-top:20px;">
 Now he mainly focuses on the following research topics:<br>
 -NLP (LLM: tool learning, acceleration, alignment)<br>
 -IR (Generative retrieval and recommendation)<br>
 -Multimedia (MLLM and multimodal information retrieval)<br>
-Our team looking for highly motivated PhD/master/undergraduate students to collaborate on various interesting research topics, including the above ones. 	If you are interested, please feel free to send your CV to my email.
+Our team is looking for highly motivated PhD/master/undergraduate students to collaborate on various interesting research topics, including the above ones. 	If you are interested, please feel free to send your CV to my email.
 </div>
 <!-- ============================Profiles===========================================!-->
 
