--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> PostDoc Fellow, <span class="title">The Hong Kong Polytechnic University</span>, Feb 2024 - now <br>
+    <td> Postdoctoral Fellow, <span class="title">The Hong Kong Polytechnic University</span>, Feb 2024 - now <br>
 			Working with Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a>
 		</td></tr></tbody>
 </table>
