--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Now he mainly focuses on the following research topics:<br>
 -NLP (LLM: tool learning, acceleration, alignment)<br>
 -IR (Generative retrieval and recommendation)<br>
 -Multimedia (MLLM and multimodal information retrieval)<br>
-Our team is looking for highly motivated PhD/master/undergraduate students to collaborate on various interesting research topics, including the above ones. 	If you are interested, please feel free to send your CV to my email.
+Our team is looking for highly motivated PhD/master/undergraduate students to collaborate on various interesting research topics, including but not limited to the above ones. 	If you are interested, please feel free to send your CV to my email.
 </div>
 <!-- ============================Profiles===========================================!-->
 
