--- a/index.html
+++ b/index.html
@@ -579,7 +579,8 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
   <br> - Yongqi Li, Cunxiao Du, Junyu Lin, Tian Gan, Xuemeng Song, Liqiang Nie
 </td></tr></tbody></table>
 
-<!-- ============================Projects===========================================!-->
+<!-- ============================Projects=========================================== 注释状态!-->
+<!-- 
 <h2 style="CLEAR: both;">Projects</h2>
 <table><tbody><tr><td>
   <span class="title">The TREC Conversational Assistance Track(2020)</span> &nbsp;&nbsp; 
@@ -607,6 +608,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
   <br> - Third Prize, National Collegiate digital media technology works competition
   <br> - <a href="https://github.com/liyongqi67/SmartMedicalKit" target="_blank">Codes</a> 
 </td></tr></tbody></table>
+!-->
 <!-- ============================Projects===========================================!-->
 
 
@@ -614,15 +616,15 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 
 <!-- ============================Patent===========================================!-->
 
-<!-- ============================Teaching Assistant===========================================!-->
+<!-- ============================Teaching===========================================!-->
 <h2 style="CLEAR: both;">Teaching Assistant</h2>
 <table><tbody><tr><td>
-2020 Spring, COMP1433 <span class="title">Introduction to Data Analytics </span> <br><br>
-2020 Fall, COMP5541 <span class="title">Machine Learning and Data Analytics </span><br><br>
-2021 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br>
-2021 Fall, COMP6703 <span class="title">Advanced Topics in Data Analytics</span> <br><br>
-2022 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br>	
-2023 Spring, COMP5423 <span class="title">Natural Language Processing </span>
+Teaching Assistant, 2020 Spring, COMP1433 <span class="title">Introduction to Data Analytics </span> <br><br>
+Teaching Assistant, 2020 Fall, COMP5541 <span class="title">Machine Learning and Data Analytics </span><br><br>
+Teaching Assistant, 2021 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br>
+Teaching Assistant, 2021 Fall, COMP6703 <span class="title">Advanced Topics in Data Analytics</span> <br><br>
+Teaching Assistant, 2022 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br>	
+Teaching Assistant, 2023 Spring, COMP5423 <span class="title">Natural Language Processing </span>
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
 
@@ -630,7 +632,8 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <!-- ============================Professional Services===========================================!-->
 
 
-<!-- ============================Honors===========================================!-->
+<!-- ============================Honors===========================================  注释状态!-->
+<!--
 <h2 style="CLEAR: both;">Honors</h2>
 
 <table><tbody><tr><td>
@@ -647,7 +650,9 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
   <span class="title">National Encouragement Scholarship</span><br><br>
 
 </td></tr></tbody></table>
+!-->
 <!-- ============================Honors===========================================!-->
+	
 <!-- ============================Map===========================================!-->
 <h2 style="CLEAR: both;"></h2>
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=P5t3EabrzZY8aFh3ZhuRPAXXUh7jCpV3TVHKUlqbMjA&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>
