--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@ His research interests include natural language processing, information retrieva
 Now he mainly focuses on the following research topics:<br>
 -NLP (LLM: tool learning, acceleration, alignment)<br>
 -IR (Generative retrieval and recommendation)<br>
--Multimedia (MLLM and multimodal information retrieval)<br>
+-Multimedia (MLLM and multimodal information retrieval)<be>
+</div>
+<div style="margin-top:20px;">
 Our team is looking for highly motivated PhD/master/undergraduate students to collaborate on various interesting research topics, including but not limited to the above ones. 	If you are interested, please feel free to send your CV to my email.
 </div>
 <!-- ============================Profiles===========================================!-->
@@ -617,7 +619,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <!-- ============================Patent===========================================!-->
 
 <!-- ============================Teaching===========================================!-->
-<h2 style="CLEAR: both;">Teaching Assistant</h2>
+<h2 style="CLEAR: both;">Teaching</h2>
 <table><tbody><tr><td>
 Teaching Assistant, 2020 Spring, COMP1433 <span class="title">Introduction to Data Analytics </span> <br><br>
 Teaching Assistant, 2020 Fall, COMP5541 <span class="title">Machine Learning and Data Analytics </span><br><br>
