--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 </table>
 <table>
   <tbody><tr>
-    <td> Research Intern <span class="title">Microsoft Research Asia</span>, Apr 2022 - Jun 2023 <br>
+    <td> Research Intern, <span class="title">Microsoft Research Asia</span>, Apr 2022 - Jun 2023 <br>
 			Working with <a href="https://scholar.google.com.hk/citations?user=InAQ3o0AAAAJ&hl=zh-CN&oi=ao" target="_blank">Nan Yang</a>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=NfJbKJ4AAAAJ" target="_blank">Liang Wang</a>, <a href="https://scholar.google.com.hk/citations?user=G-V1VpwAAAAJ&hl=en&oi=ao" target="_blank">Furu Wei</a>
 		</td></tr></tbody>
 </table>
 <table>
   <tbody><tr>
-    <td> Research Intern <span class="title">Shandong University</span>, July 2017 - Dec 2020 <br>
+    <td> Research Intern, <span class="title">Shandong University</span>, July 2017 - Dec 2020 <br>
 			Working with <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
 		</td></tr></tbody>
 </table>
