--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <h2>News</h2><br>
     <font size="3px">
 
+    <b>25 Apr 2024/b><br>
+    <span class="easylink">
+    We release a survey about generative retrieval and recommendation on <a href="https://arxiv.org/abs/2404.16924" target="_blank">Arxiv</a>!
+    </span><br><br>	
+
     <b>26 Mar 2024</b><br>
     <span class="easylink">
     Our paper "Data-efficient Fine-tuning for LLM-based Recommendation" is accepted by SIGIR 2024. Congratulations to <a href="https://scholar.google.com.hk/citations?user=0O_bs3UAAAAJ&hl=zh-CN" target="_blank">Xinyu</a>!
@@ -198,6 +203,18 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2404.16924" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">A Survey of Generative Search and Recommendation in the Era of Large Language Models</span> 
+      <br><b>Yongqi Li</b>,  Xinyu Lin, Wenjie Wang, Fuli Feng, Liang Pang, Wenjie Li, Liqiang Nie, Xiangnan He, Tat-Seng Chua
+    <br>Arxiv 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
 	
 <table>
   <tbody>
