--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>News</h2><br>
     <font size="3px">
 
-    <b>25 Apr 2024/b><br>
+    <b>25 Apr 2024<br>
     <span class="easylink">
     We release a survey about generative retrieval and recommendation on <a href="https://arxiv.org/abs/2404.16924" target="_blank">Arxiv</a>!
     </span><br><br>	
