--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
     <h2>News</h2><br>
     <font size="3px">
 
-	    <!--
+    <b>2 May 2024<br>
+    <span class="easylink">
+    Our paper (<a href="https://arxiv.org/abs/2402.02082" target="_blank">Arxiv</a>) about LLM acceleration is accepted by ICML 2024.  Congratulations to <a href="https://nonvolatilememory.github.io/" target="_blank">Cunxiao Du</a>!
+    </span><br><br>	
+
+	    
+	    
     <b>25 Apr 2024<br>
     <span class="easylink">
     We release a survey about generative retrieval and recommendation on <a href="https://arxiv.org/abs/2404.16924" target="_blank">Arxiv</a>!
     </span><br><br>	
-!-->
+
     <b>26 Mar 2024</b><br>
     <span class="easylink">
     Our paper "Data-efficient Fine-tuning for LLM-based Recommendation" is accepted by SIGIR 2024. Congratulations to <a href="https://scholar.google.com.hk/citations?user=0O_bs3UAAAAJ&hl=zh-CN" target="_blank">Xinyu</a>!
@@ -203,7 +209,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <div id="papers">
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
-!-->
+
 <table>
   <tbody>
   <tr>
@@ -216,7 +222,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
   </tr>
  </tbody>
 </table>
-!-->	
+
 <table>
   <tbody>
   <tr>
