--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <b>2 May 2024<br>
     <span class="easylink">
-    Our paper (<a href="https://arxiv.org/abs/2402.02082" target="_blank">Arxiv</a>) about LLM acceleration is accepted by ICML 2024.  Congratulations to <a href="https://nonvolatilememory.github.io/" target="_blank">Cunxiao Du</a>!
+    Our paper (<a href="https://arxiv.org/abs/2402.02082" target="_blank">Arxiv</a>) about LLM acceleration is accepted by ICML 2024.  Congratulations to <a href="https://nonvolatilememory.github.io/" target="_blank">Cunxiao</a>!
     </span><br><br>	
 
 	    
@@ -210,6 +210,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
+<!--
 <table>
   <tbody>
   <tr>
@@ -222,7 +223,8 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
   </tr>
  </tbody>
 </table>
-
+!-->
+	
 <table>
   <tbody>
   <tr>
