--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
-<!-- 	
-    <b>2 May 2024<br>
+	
+    <b>2 May 2024</b><br>
     <span class="easylink">
     Our paper (<a href="https://arxiv.org/abs/2402.02082" target="_blank">Arxiv</a>) about LLM acceleration is accepted by ICML 2024.  Congratulations to <a href="https://nonvolatilememory.github.io/" target="_blank">Cunxiao</a>!
     </span><br><br>	
 
 	    
     
-    <b>25 Apr 2024<br>
+    <b>25 Apr 2024</b><br>
     <span class="easylink">
     We release a survey about generative retrieval and recommendation on <a href="https://arxiv.org/abs/2404.16924" target="_blank">Arxiv</a>!
     </span><br><br>
-!-->
+
 
     <b>26 Mar 2024</b><br>
     <span class="easylink">
